# b2b

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
config/: keywords.md  tags.md
docs/: VERIFICATION_REPORT.md  design.md
docs/archive/: 2026-02-24-channel-capability-scoring-design.md  2026-02-24-facts-only-scoring.md
docs/plans/: 2026-02-24-facts-only-scoring-design.md  2026-02-24-rental-business-scoring-design.md  2026-02-24-rental-business-scoring-impl.md  2026-02-24-score-breakdown-visibility.md  2026-02-25-channel-partner-routing-design.md  2026-02-25-channel-partner-routing.md  2026-02-25-crawl4ai-integration-design.md  2026-02-25-crawl4ai-integration-impl.md  2026-02-25-customer-overlap-scoring-design.md  2026-02-25-customer-overlap-scoring-impl.md  2026-02-25-manufacturer-exclusion-rules-design.md  2026-02-25-non-distributor-routing-design.md  2026-02-25-non-distributor-routing.md  2026-02-25-scoring-table-and-competitor-elevation.md  2026-02-25-tool-authoritative-inspector-design.md  2026-02-28-lead-enricher-design.md  (+20 more)
human_input/: competitor distributors.csv  possible distributors(consider to merge into the current one).md  serp_results.csv
scripts/: crawl4ai-server.sh  release.sh
skills/: distributor-inspector.md
skills/lead-enricher/scripts/: enrich.py  pyproject.toml  setup.py
skills/lead-enricher/scripts/tests/: test_enrich.py
skills/shared-scripts/: __init__.py  brightdata_utils.py  pyproject.toml  serp_search.py
skills/shared-scripts/tests/: __init__.py  test_brightdata_utils.py  test_serp_search.py
(+59 files in other folders)
