[project]
name = "lead-enricher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "brightdata-sdk>=2.2.0",
    "aiohttp>=3.9.0",
    "thefuzz>=0.22.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
